@@ -1,13 +1,15 @@
 package com.atlantbh.internship.auction.app.config;
 
+import com.atlantbh.internship.auction.app.builder.CorsConfigurationBuilder;
 import com.atlantbh.internship.auction.app.config.constant.AuctionAppProperties;
-import org.springframework.http.HttpMethod;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Collections;
-import java.util.List;
+
+import static com.atlantbh.internship.auction.app.builder.CorsConfigurationBuilder.Methods.GET;
+import static com.atlantbh.internship.auction.app.builder.CorsConfigurationBuilder.Methods.POST;
 
 public class CorsConfigurer {
     private final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -26,29 +28,48 @@ public class CorsConfigurer {
         return source;
     }
 
-    // By default, if the list of allowedMethods is empty, all HTTP methods will be allowed!
-    private void buildCorsConfiguration(final String path, final List<String> allowedMethods) {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Collections.singletonList(appProperties.getClientRoute()));
-        configuration.setAllowedMethods(allowedMethods);
+    private void registerCorsConfig(final String path, final CorsConfiguration configuration) {
         source.registerCorsConfiguration(appProperties.getApiVersion() + path, configuration);
     }
 
+    // By default, if the list of allowedMethods is empty, all HTTP methods will be allowed!
     private void buildItemCorsConfiguration() {
-        buildCorsConfiguration("/items", List.of(HttpMethod.GET.name()));
-        buildCorsConfiguration("/items/{id}", List.of(HttpMethod.GET.name()));
-        buildCorsConfiguration("/items/featured", List.of(HttpMethod.GET.name()));
+        final CorsConfiguration itemsConfig = new CorsConfigurationBuilder()
+                .setAllowedOrigins(Collections.singletonList(appProperties.getClientRoute()))
+                .setAllowedMethods(GET)
+                .allowCredentials()
+                .build();
+
+        registerCorsConfig("/items/**", itemsConfig);
     }
 
     private void buildCategoryCorsConfiguration() {
-        buildCorsConfiguration("/categories", List.of(HttpMethod.GET.name()));
+        final CorsConfiguration categoriesConfig = new CorsConfigurationBuilder()
+                .setAllowedOrigins(Collections.singletonList(appProperties.getClientRoute()))
+                .setAllowedMethods(GET)
+                .allowCredentials()
+                .build();
+
+        registerCorsConfig("/categories", categoriesConfig);
     }
 
     private void buildUserRegistrationCorsConfiguration() {
-        buildCorsConfiguration("/register", List.of(HttpMethod.POST.name()));
+        final CorsConfiguration registerConfig = new CorsConfigurationBuilder()
+                .setAllowedOrigins(Collections.singletonList(appProperties.getClientRoute()))
+                .setAllowedMethods(POST)
+                .allowCredentials()
+                .build();
+
+        registerCorsConfig("/register", registerConfig);
     }
 
     private void buildUserAuthenticationCorsConfiguration() {
-        buildCorsConfiguration("/authentication", List.of(HttpMethod.POST.name()));
+        final CorsConfiguration authConfig = new CorsConfigurationBuilder()
+                .setAllowedOrigins(Collections.singletonList(appProperties.getClientRoute()))
+                .setAllowedMethods(POST)
+                .allowCredentials()
+                .build();
+
+        registerCorsConfig("/authentication", authConfig);
     }
 }
